Minor CSS fix to prevent flicker on edit field group metabox

--- a/css/field-group.css
+++ b/css/field-group.css
@@ -67,6 +67,7 @@
 
 #acf-field-group-fields > .inside {
 	padding: 0;
+	margin: 0;
 }
 
 #acf-field-group-fields > .handlediv,
